# purple-fb-master

./: .hgignore  AUTHORS  COPYRIGHT  ChangeLog  ChangeLog.API  NEWS  README  convey.yaml  im.pidgin.Pidgin3.yml  meson.build  meson_options.txt  mkmesonconf.py
libpurple/: account.c  account.h  accounts.c  accounts.h  action.c  action.h  blistnode.c  blistnode.h  buddy.c  buddy.h  buddyicon.c  buddyicon.h  buddylist.c  buddylist.h  chat.c  chat.h  check_license_header_template.h  circularbuffer.c  circularbuffer.h  cmds.c  cmds.h  connection.c  connection.h  contact.c  contact.h  conversations.c  conversations.h  core.c  core.h  countingnode.c  countingnode.h  debug.c  debug.h  eventloop.c  eventloop.h  group.c  group.h  idle.c  idle.h  image-store.c  (+221 more)
libpurple/data/: im.pidgin.Purple.PresenceManager.gschema.xml  im.pidgin.Purple.gschema.xml  meson.build
libpurple/media/: backend-iface.c  backend-iface.h  candidate.c  candidate.h  codec.c  codec.h  enum-types.c  enum-types.h
libpurple/plugins/: meson.build
libpurple/plugins/autoaccept/: autoaccept.c  meson.build
libpurple/plugins/hello-world/: hello_world.c  meson.build
libpurple/plugins/idle/: idle.c  meson.build
libpurple/plugins/joinpart/: joinpart.c  meson.build
libpurple/plugins/keychain-access/: keychain-access.c  meson.build
libpurple/plugins/kwallet/: meson.build  (+1 more)
libpurple/protocols/: meson.build
libpurple/reference/: meson.build  tut_c_plugins.md
libpurple/request/: purplerequestfield.c  purplerequestfield.h  purplerequestfieldaccount.c  purplerequestfieldaccount.h  purplerequestfieldbool.c  purplerequestfieldbool.h  purplerequestfieldchoice.c  purplerequestfieldchoice.h  purplerequestfielddatasheet.c  purplerequestfielddatasheet.h  purplerequestfieldimage.c  purplerequestfieldimage.h  purplerequestfieldint.c  purplerequestfieldint.h  purplerequestfieldlabel.c  purplerequestfieldlabel.h  purplerequestfieldlist.c  purplerequestfieldlist.h  purplerequestfieldstring.c  purplerequestfieldstring.h  purplerequestgroup.c  purplerequestgroup.h  purplerequestpage.c  purplerequestpage.h
libpurple/tests/: meson.build  test_account_manager.c  test_authorization_request.c  test_authorization_request_notification.c  test_avatar.c  test_badge.c  test_badges.c  test_channel_join_details.c  test_contact.c  test_contact_info.c  test_contact_manager.c  test_conversation.c  test_conversation_manager.c  test_conversation_member.c  test_conversation_members.c  test_create_conversation_details.c  test_credential_manager.c  test_credential_provider.c  test_file_transfer.c  test_file_transfer_manager.c  test_history_adapter.c  test_history_manager.c  test_idle_manager.c  test_image.c  test_keyvaluepair.c  test_markup.c  test_menu.c  test_message.c  test_messages.c  test_notification.c  test_notification_add_contact.c  test_notification_authorization_request.c  test_notification_link.c  test_notification_manager.c  test_person.c  test_presence.c  test_presence_manager.c  test_protocol.c  test_protocol_contacts.c  test_protocol_conversation.c  (+13 more)
libpurple/win32/: libc_interface.c  libc_interface.h  libc_internal.h  libpurplerc.rc.in  win32dep.c  win32dep.h
pidgin/: gtkblist.c  gtkblist.h  gtkconv.c  gtkconv.h  gtkdialogs.c  gtkdialogs.h  gtkidle.c  gtkidle.h  gtkmedia.c  gtkmedia.h  gtknotify.c  gtknotify.h  gtkpluginpref.c  gtkprivacy.c  gtkrequest.c  gtkrequest.h  gtkroomlist.c  gtkroomlist.h  gtksavedstatuses.h  gtkutils.c  gtkutils.h  gtkwhiteboard.c  gtkwhiteboard.h  gtkxfer.c  gtkxfer.h  libpidgin.c  meson.build  pidgin.c  pidginabout.c  pidginabout.h  pidginaccountchooser.c  pidginaccountchooser.h  pidginaccountdisplay.c  pidginaccountdisplay.h  pidginaccounteditor.c  pidginaccounteditor.h  pidginaccountfilterconnected.c  pidginaccountfilterconnected.h  pidginaccountfilterprotocol.c  pidginaccountfilterprotocol.h  (+92 more)
pidgin/data/: im.pidgin.Pidgin3.desktop.in.in  im.pidgin.Pidgin3.metainfo.xml  meson.build
pidgin/plugins/: meson.build
pidgin/prefs/: pidginawayprefs.c  pidginawayprefs.h  pidginconversationprefs.c  pidginconversationprefs.h  pidgincredentialprefs.c  pidgincredentialprefs.h  pidgincredentialproviderrow.c  pidgincredentialproviderrow.h  pidginnetworkprefs.c  pidginnetworkprefs.h  pidginprefs.c  pidginprefs.h  pidginproxyprefs.c  pidginproxyprefs.h  pidginvvprefs.c  pidginvvprefs.h
pidgin/reference/: meson.build  urlmap.js
pidgin/resources/: account-row.ui  avatar.ui  channeljoindialog.ui  contactlist.ui  contactlistitem.ui  conversationmemberlistitem.ui  display-item.ui  display-window.ui  imwindow.ui  infopane.ui  notification.ui  notificationaddcontact.ui  notificationlink.ui  notificationlist.ui  pidgin.gresource.xml  statusprimitivechooser.ui  style.css  typinglabel.ui
pidgin/tests/: meson.build  test-wrapper.py  test_text_buffer.c
pidgin/win32/: gtkwin32dep.c  gtkwin32dep.h  pidgin_dll_rc.rc.in  pidgin_exe_rc.rc.in  winpidgin.c
protocols/bonjour/: meson.build  purplebonjourconnection.c  purplebonjourconnection.h  purplebonjourconstants.h  purplebonjourcore.c  purplebonjourcore.h  purplebonjourprotocol.c  purplebonjourprotocol.h
protocols/demo/: meson.build  purpledemoconnection.c  purpledemocontacts.c  purpledemoprotocol.c  purpledemoprotocolactions.c  purpledemoprotocolactions.h  purpledemoprotocolcontacts.c  purpledemoprotocolcontacts.h  purpledemoprotocolconversation.c  purpledemoprotocolmedia.c
protocols/ircv3/: meson.build  purpleircv3capabilities.c  purpleircv3capabilities.h  purpleircv3connection.c  purpleircv3connection.h  purpleircv3constants.h  purpleircv3core.c  purpleircv3core.h  purpleircv3ctcphandlers.c  purpleircv3ctcphandlers.h  purpleircv3formatting.c  purpleircv3message.c  purpleircv3message.h  purpleircv3messagehandlers.c  purpleircv3messagehandlers.h  purpleircv3protocol.c  purpleircv3protocol.h  purpleircv3protocolconversation.c  purpleircv3sasl.c  purpleircv3sasl.h  purpleircv3source.c
protocols/xmpp/: meson.build  purplexmppconnection.c  purplexmppconnection.h  purplexmppconstants.h  purplexmppcore.c  purplexmppcore.h  purplexmppprotocol.c  purplexmppprotocol.h
(+330 files in other folders)
