##############################################################################
# General Options

option('devenv-config-dir', type : 'string',
       description : 'config directory for running a devenv (defaults to a subdirectory of buildroot)')

option('doc', type : 'boolean', value : false,
       description : 'build documentation with gtk-doc')

option('introspection', type : 'boolean', value : true,
       description : 'build introspection data')

##############################################################################
# Libpurple Options

option('kwallet', type : 'feature',
       description : 'enable KWallet support')

option('libsecret', type : 'feature',
       description : 'enable libsecret support')

##############################################################################
# Protocol Plugins

option('avahi', type : 'feature',
       description : 'compile with avahi (required for Bonjour support)')

option('dynamic-prpls', type : 'string', value: 'all',
       description : 'specify which protocols to build dynamically')

##############################################################################
# Pidgin Options

option('gtkui', type : 'boolean', value : true,
       description : 'compile with GTK+ user interface')

option('unity-integration', type : 'feature', value : 'disabled',
       description : 'compile with support for unity integration plugin')

